--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,15 @@
 html,
 body,
-#root,
-.app {
-    height: 100%;
+#root {
+    min-height: 100%;
+}
+
+p {
+    margin: 0;
 }
 
 .app {
+    min-height: 100vh;
     text-align: center;
     background-color: #282c34;
     color: white;
