--- a/src/components/Elevator.scss
+++ b/src/components/Elevator.scss
@@ -1,5 +1,6 @@
 $floor-size: 100px;
 $floor-button-size: 15px;
+$call-button-size: 24px;
 
 .elevator {
     width: 100%;
@@ -7,46 +8,77 @@ $floor-button-size: 15px;
     flex-direction: column-reverse;
 }
 
-.floor {
-    width: $floor-size;
-    height: $floor-size;
-    position: relative;
-    background: gray;
+.floor-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
-    margin: 10px auto;
 
-    .number {
-        margin: 0;
-        font-weight: bold;
-        font-size: 20px;
-    }
-
-    &.current {
-        background-color: burlywood;
-    }
-
-    .floor-buttons {
-        width: 40%;
-        height: 100%;
-        position: absolute;
-        right: 5px;
+    .call-buttons {
         display: flex;
-        flex-direction: column-reverse;
-        flex-wrap: wrap;
-        align-items: flex-end;
-        margin-bottom: 10px;
+        flex-direction: column;
 
-        p {
-            width: $floor-button-size;
-            height: $floor-button-size;
-            font-size: 10px;
-            color: black;
-            background-color: yellow;
-            border-radius: 50%;
-            cursor: pointer;
+        .btn {
+            font-size: $call-button-size;
+            width: $call-button-size;
+            height: $call-button-size;
+
+            &:hover {
+                color: burlywood
+            }
+        }
+    }
+
+    .floor {
+        width: $floor-size;
+        height: $floor-size;
+        position: relative;
+        background: gray;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+        margin-top: 10px;
+
+        .number {
+            margin: 0;
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        &.current {
+            background-color: burlywood;
+        }
+
+        .floor-buttons {
+            width: 40%;
+            height: 100%;
+            position: absolute;
+            right: 5px;
+            display: flex;
+            flex-direction: column-reverse;
+            flex-wrap: wrap;
+            align-items: flex-end;
+            margin-bottom: 10px;
+
+            p {
+                width: $floor-button-size;
+                height: $floor-button-size;
+                font-size: 10px;
+                color: black;
+                background-color: greenyellow;
+                border-radius: 50%;
+                cursor: pointer;
+                opacity: 0.7;
+
+                &.current {
+                    opacity: 1;
+                    background-color: yellow;
+                }
+
+                &:hover {
+                    opacity: 1;
+                }
+            }
         }
     }
 }
